Fix header overlap preventing button click (#360)

--- a/app/Resources/webpack/sass/_header.scss
+++ b/app/Resources/webpack/sass/_header.scss
@@ -1,10 +1,11 @@
-#adl-header {
+.header-container {
   @extend .container;
+}
 
+#adl-header {
   position: absolute;
   top: 0;
-  left: 50%;
-  transform: translate(-50%, 0);
+  right: $adl-body-padding;
   z-index: 100;
 
   display: flex;
